tests/res/has/error_value_match.say
say x = 1;
x has { a: x + 1 }; // error: Unexpected token: Expected '}' but found '+'
